resources/tests/files/fail/FunctionImplGenericSize.krna

TODO validate argument and return type
/*
fn f(a: fn(string) -> string impl java::util::function::Consumer<string>) {

}
*/